# agentic_governance_artemis_city

./: .editorconfig  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .pylintrc  .secrets.baseline  AGENTS.md  ARTEMIS_FEATURES.md  CLAUDE.md  CODING_STANDARDS.md  CONTRIBUTING.md  Claude  Dockerfile  GEMINI.md  LICENSE  LIVING_CITY.md  MEMORY_INTEGRATION.md  Makefile  README(1).txt  README.md  SECURITY.md  TEST_PLAN.md  WARP.md  _Index_of_Artemis-City.md  _Index_of_ArtemisCity.md  api.ts  atp-prototype.html  atp-prototype.jsx  demo_artemis.py  demo_city_postal.py  demo_memory_integration.py  docker-compose.yml  eslint.config.js  main.py  package-lock.json  package.json  provenance_shield.sh  pyproject.toml  (+5 more)
.claude/: .env.example
.github/: dependabot.yml
.github/workflows/: ci.yml  code-quality.yml  dependencies.yml  main.yml  release.yml
.jupyter/: desktop-settings.json
.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
.tmp.driveupload/: 220414  220418  220422  220424  220442  220444  220446  220454  220460  220476  220488  220492  220496  220500  220502  220504  220506  220508  220510  220512  220514  220516  220518  220520  220522  220524  220526  220528  220530  220532  220534  220536  220538  220540  220542  220544  220550  220554  220558  220560  (+6930 more)
Agents_MD/: (2)._CompSuite  AGENTS.md  Agent_Card_Template.md  Agent_Zero_Starter.md  Agents.md  Artemis Transmission Protocol (ATP).md  Artemis_Agent_Card.md  CLAUDE.md  CompSuite_Readme.md  Developer_Agent  GEMINI.md  GPT4.1_Recent Cht.canvas  GPT_Agent_Ecosystem.md  GPT_Agent_Ecosystem.md.md  GPT_Models.md  How Agents speak.md  Packrat Agent  Quant_Harmony.md  REGISTRY.md  _Index_of_Agents_MD.md  git.md
Agents_MD/AgentZero/: AgentZero.md  Agent_Zero_Starter.md  Codex_Agent_Card.md  Codex_Agent_Card.md.md  index.md  index.md.md
Agents_MD/Agent_Zero/: Agent_Card.md  Agent_Card.md.md  _Index_of_Agent_Zero.md
Agents_MD/Artemis/: # Commit Summary.md  202505280101-Architectural Manifesto.md  ACP_Note_Template.md  Agent_Card.md  Artemis Transmission Protocol (ATP) 1.md  Artemis.md  Artemis_Agent_Card.md  Artemis_Agent_Card.md (2).md  Artemis_Communcation_Protocol (ATP).md  Memory_Index.csv  Memory_Index.csv.md  _Index_of_Artemis.md  index.md.md
Agents_MD/CompSuite/: Agent_Card-CompSuite (2).md  Agent_Card-CompSuite.md  Agent_Card.md  CompSUiteV1_Update_04272025.md  CompSuite.md  CompSuite_GPT_Model.md  _Index_of_CompSuite.md
Agents_MD/Helper_Files/: Agent_Card_Template.md  GPT_Default_Behavior.md  GPT_Models 1.md  GPT_Models.md  REGISTRY.md  _Index_of_Helper_Files.md
Agents_MD/Quantum_Harmony_OS/: Recording 20250524154136.m4a  _Index_of_Quantum_Harmony_OS.md
Agents_MD/The_Pack_Rat/: Agent_Card.md  Agent_Card.md.md  Memory_Index.csv  Memory_Index.csv.md  The_Pack_Rat.md
Artemis Agentic Memory Layer/: Dockerfile  _Index_of_Artemis Agentic Memory Layer.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
Artemis Agentic Memory Layer(MCP)/: ModuleAnalysisCache-810547F0  README.md  docker-compose.yml  main.py  pyproject.toml  tsconfig.json
Artemis Agentic Memory Layer(MCP)/src/: index.ts
Artemis Agentic Memory Layer/src/: index.ts
MCP/: HEBBIAN_LEARNING.md  PROJECT_UPDATE_PLAN.md  README.md  requirements.txt
MCP/src/: __init__.py  vector_store.py
agents/: _Index_of_agents.md  agent_template.md  artemis.md  artemis_transmission_protocol (ATP)  codex_daemon.md  copilot.md  pack_rat.md
agents/artemis/: persona.py  reflection.py  semantic_tagging.py
agents/atp/: __init__.py  atp_models.py  atp_parser.py  atp_validator.py
api/: index.ts  package-lock.json  package.json  tsconfig.json
api/controllers/: agentController.ts  atpController.ts  index.ts  llmController.ts  memoryController.ts  trustController.ts
api/middleware/: auth.ts  errorHandler.ts  index.ts  logger.ts
api/models/: index.ts
api/utils/: helpers.ts
api/v1/: agents.ts  atp.ts  health.ts  index.ts  llm.ts  memory.ts  trust.ts
app/: .flake8  .pylintrc  _Index_of_src.md
app/Artemis Agentic Memory Layer/: README.md  _Index_of_Artemis Agentic Memory Layer.md  tsconfig.json
app/agents/: agent_template.md  artemis.md  copilot.md  pack_rat.md
app/codex/: __init__.py  agent_router.py  agent_router.yaml  codex_cli.py  kernel.py  memory_bus.py
app/integration/: __init__.py  context_loader.py  postal_service.py
app/interface/: agent_router.yaml  codex_cli.py
app/launch/: main.py  package.json  requirements-dev.txt
app/sandbox_city/: index.md  semantic_zones.md
artemis-city-blog/: AGENTS.md  CLAUDE.md  GEMINI.md  README.md  _Index_of_artemis-city-blog.md  agentslog.md  next.config.js  package-lock.json  package.json  requirements.txt  tailwind.config.js
artemis-city-blog/components/: Layout.js  MDXComponents.js  PostCard.js  ThemeProvider.js
artemis-city-blog/mediafiles/: Agent_Architecture__From_Prototypes_to_Production.md  Whitebook_Artemiscity  transcribe.sh
artemis-city-blog/pages/: _app.js  _document.js  about.js  blog.js  contact.js  index.js
artemis-city-blog/posts/: 5-Minute Quick Start Guide.md  Discord Community Structure.md  (+12 more)
codex/: _Index_of_codex.md  manifesto.md
core/: __init__.py
docs/: .env.example  AGENT_ACTIVITY_LOG.md  ARTEMIS_FEATURES.md  CICD.md  INSTALL.md  LIVING_CITY.md  MEMORY_INTEGRATION.md  _Index_of_docs.md  docs.json  kernel.md  memory_lawyer.md  open_source_covenant.md  release_gatecheck.md  translator_protocol.md  trust_decay_model.md  validation_simulations.md
interface/: _Index_of_interface.md  codex_cli.py  translator_protocol.md
launch/: _Index_of_launch.md  open_source_covenant.md  release_gatecheck.md
mcp-auth/: obsidianconfig.json
memory/: _Index_of_memory.md  memory_lawyer.md  trust_decay_model.md  validation_simulations.md
sandbox_city/: _Index_of_sandbox_city.md  index.md  package.json  semantic_zones.md
scripts/: cleanup-filenames.sh
src/: .prettierrc  _Index_of_src.md
tests/: _Index_of_tests.md  __init__.py  test_artemis_persona.py  test_atp.py  test_instruction_loader.py  test_memory_integration.py
(+119 files in other folders)
