[project]
name = "artemis-city"
version = "0.1.0"
description = "Architectural framework for agentic reasoning with transparent, accountable action across distributed intelligence systems"
readme = "README.md"
requires-python = ">=3.8,<3.14"

authors = [
    {name = "Prinston Palmer", email = "prinstonpalmer879@gmail.com"}
]
license = {text = "MIT"}
keywords = ["agents", "ai", "agentic", "governance", "trust", "memory", "distributed-systems", "artificial-intelligence"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pyyaml>=6.0.1,<7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "bandit>=1.7.0",
    "ipython>=8.18.0",
    "rich>=13.7.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]
enhanced = [
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "click>=8.1.0",
    "prompt-toolkit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/popvilla/artemis-city"
Documentation = "https://github.com/popvilla/artemis-city#readme"
Repository = "https://github.com/popvilla/artemis-city"
Changelog = "https://github.com/popvilla/artemis-city/releases"
Issues = "https://github.com/popvilla/artemis-city/issues"
Discussion = "https://github.com/popvilla/artemis-city/discussions"
Funding = "https://github.com/sponsors/popvilla"

[project.scripts]
artemis = "interface.codex_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agents", "src/core", "src/integration", "src/interface", "src/launch", "src/memory", "src/sandbox_city"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
skip-string-normalization = true
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
