[project]
name = "artemis-city"
version = "0.1.0"
description = "Architectural framework for agentic reasoning with transparent, accountable action across distributed intelligence systems"
readme = "README.md"
requires-python = ">=3.8,<3.14"

authors = [
    {name = "Prinston Palmer", email = "prinstonpalmer879@gmail.com"}
]
license = {text = "MIT"}
keywords = ["agents", "ai", "agentic", "governance", "trust", "memory", "distributed-systems", "artificial-intelligence"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pyyaml>=6.0.1,<7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "bandit>=1.7.0",
    "ipython>=8.18.0",
    "rich>=13.7.0",
    # JSF Compliance Tools (AV Rules 1-3, 134-135, 217)
    "radon>=6.0.0",           # Code complexity analysis
    "interrogate>=1.5.0",     # Docstring coverage
    "typing_extensions>=4.0.0",  # TypedDict support for Python 3.8-3.10
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]
enhanced = [
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "click>=8.1.0",
    "prompt-toolkit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/popvilla/artemis-city"
Documentation = "https://github.com/popvilla/artemis-city#readme"
Repository = "https://github.com/popvilla/artemis-city"
Changelog = "https://github.com/popvilla/artemis-city/releases"
Issues = "https://github.com/popvilla/artemis-city/issues"
Discussion = "https://github.com/popvilla/artemis-city/discussions"
Funding = "https://github.com/sponsors/popvilla"

[project.scripts]
codex = "codex.codex_cli:main"
artemis = "interface.codex_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src"]

[tool.hatch.build.targets.wheel]
sources = ["src"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
skip-string-normalization = true
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["src"]

# =============================================================================
# JSF Compliance Configuration
# =============================================================================

[tool.mypy]
# JSF AV Rules 209, 147 - Type Safety
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
extra_checks = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = [
    "yaml.*",
    "agents.*",
]
ignore_missing_imports = true

[tool.interrogate]
# JSF AV Rules 134-135 - Documentation Coverage
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = true
ignore-module = false
ignore-nested-functions = true
ignore-nested-classes = true
fail-under = 80
exclude = ["setup.py", "docs", "build", ".venv", "tests"]
verbose = 1
quiet = false
color = true
generate-badge = "."
badge-format = "svg"

[tool.radon]
# JSF AV Rules 1-3 - Code Complexity
# Functions should not exceed cyclomatic complexity of 20
cc_min = "C"  # Report functions with complexity C or higher (11-20)
mi_min = "B"  # Maintainability index minimum
show_complexity = true
average = true
total_average = true
exclude = ".venv/*,build/*,dist/*"

[tool.coverage.run]
branch = true
source = ["app", "MCP/src"]
omit = [
    "*/__init__.py",
    "*/tests/*",
    ".venv/*",
]

[tool.coverage.report]
# JSF requirement: 80% coverage minimum
fail_under = 80
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests", "MCP/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]
